# HomeWork-11

./: CMakeLists.txt  helper.cpp  helper.h  main.cpp
Headers/: task_3.h  task_4.h
Tasks/: task_1.cpp  task_2.cpp  task_3.cpp  task_4.cpp  task_5.cpp
Tasks/Task_1/: task_1.cpp  task_1.h
Tasks/Task_2/: task_2.cpp  task_2.h
Tasks/Task_3/: task_3.cpp
Tasks/Task_4/: task_4.cpp  task_4.h
Tasks/Task_5/: task_5.cpp  task_5.h
