cmake_minimum_required(VERSION 3.21)
project(HomeWork_11)

set(CMAKE_CXX_STANDARD 20)

add_executable(HomeWork_11 main.cpp Tasks/Task_1/task_1.cpp Tasks/Task_1/task_1.h Tasks/Task_2/task_2.cpp Tasks/Task_2/task_2.h Tasks/Task_3/task_3.cpp Tasks/Task_3/task_3.h Tasks/Task_4/task_4.cpp Tasks/Task_4/task_4.h Tasks/Task_5/task_5.cpp Tasks/Task_5/task_5.h)
